--- a/ios/RNStarter.xcodeproj/xcshareddata/xcschemes/RNStarter.xcscheme
+++ b/ios/RNStarter.xcodeproj/xcshareddata/xcschemes/RNStarter.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Ecoloby.app"
-               BlueprintName = "Ecoloby"
-               ReferencedContainer = "container:Ecoloby.xcodeproj">
+               BuildableName = "RNStarter.app"
+               BlueprintName = "RNStarter"
+               ReferencedContainer = "container:RNStarter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "EcolobyTests.xctest"
-               BlueprintName = "EcolobyTests"
-               ReferencedContainer = "container:Ecoloby.xcodeproj">
+               BuildableName = "RNStarterTests.xctest"
+               BlueprintName = "RNStarterTests"
+               ReferencedContainer = "container:RNStarter.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Ecoloby.app"
-            BlueprintName = "Ecoloby"
-            ReferencedContainer = "container:Ecoloby.xcodeproj">
+            BuildableName = "RNStarter.app"
+            BlueprintName = "RNStarter"
+            ReferencedContainer = "container:RNStarter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Ecoloby.app"
-            BlueprintName = "Ecoloby"
-            ReferencedContainer = "container:Ecoloby.xcodeproj">
+            BuildableName = "RNStarter.app"
+            BlueprintName = "RNStarter"
+            ReferencedContainer = "container:RNStarter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
