--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "adb": "adb devices",
     "clean": "cd android && ./gradlew clean && cd ..",
     "android": "npx react-native run-android",
-    "generate:apk": "cd android && ./gradlew assembleRelease && cd ..",
-    "generate:aab": "cd android && ./gradlew bundleRelease && cd ..",
-    "ios": "npx react-native run-ios --simulator=\"iPhone 8\"",
-    "install:pods": "cd ios && pod install && cd ..",
+    "apk": "cd android && ./gradlew assembleRelease && cd ..",
+    "aab": "cd android && ./gradlew bundleRelease && cd ..",
+    "ios": "npx react-native run-ios --simulator=\"iPhone 13 Pro\"",
+    "pod": "cd ios && pod install && cd ..",
+    "both": "npm run android && npm run ios",
     "build:ios": "npx react-native bundle --entry-file='index.js' --bundle-output='./ios/TSStarter/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
     "commit": "npx gitmoji -c",
     "rename": "npx react-native-rename",
@@ -23,8 +24,6 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.6.1",
-    "graphql": "^15.5.2",
-    "graphql-request": "^3.5.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-config": "^1.4.4",
