--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+node_modules
+node_modules/
+**/node_modules
+/node_modules
+**node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+node_modules
+node_modules
+
+
 # OSX
 #
 .DS_Store
@@ -24,11 +37,22 @@ DerivedData
 # Android/IntelliJ
 #
 build/
+/build
 .idea
 .gradle
+.gradle/
+/.gradle
 local.properties
 *.iml
-
+/*/build
+/*/*/build
+/*/*/*/build
+/*/*/*/*/build
+/*/docs/src/samples/**/build
+/*/docs/src/snippets/**/build
+/*/internal-android-performance-testing/build-android-libs
+test-splits/
+/gradle/verification-keyring.gpg
 # node.js
 #
 node_modules/
@@ -40,7 +64,15 @@ buck-out/
 \.buckd/
 *.keystore
 !debug.keystore
+# built application files
+*.apk
+*.ap_
 
+# files for the dex VM
+*.dex
+# generated files
+bin/
+gen/
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
@@ -57,3 +89,33 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+.env
+
+# Logs
+# ----
+
+/*.log
+*.log
+
+/*.lock
+*.lock
+
+/*.bin
+*.bin
+
+logs/**	
+
+
+
+
+
+# Thread dumps for troubleshooting
+*.threaddump
+
+# oh-my-zsh gradle plugin
+.gradletasknamecache
+
+# HPROF
+# -----
+*.hprof
