--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "android": "npx react-native run-android",
     "apk": "cd android && ./gradlew assembleRelease && cd ..",
     "aab": "cd android && ./gradlew bundleRelease && cd ..",
-    "ios": "npx react-native run-ios --simulator=\"iPhone 13 Pro\"",
+    "ios": "npx react-native run-ios --simulator=\"iPhone 11 Pro Max\"",
     "pod": "cd ios && pod install && cd ..",
-    "both": "npm run android && npm run ios",
+    "both": "yarn android && yarn ios",
     "build:ios": "npx react-native bundle --entry-file='index.js' --bundle-output='./ios/TSStarter/main.jsbundle' --dev=false --platform='ios' --assets-dest='./ios'",
     "commit": "npx gitmoji -c",
     "rename": "npx react-native-rename",
