--- a/ios/Drop/Info.plist
+++ b/ios/Drop/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -35,18 +35,18 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Drop requires access to your phone’s camera for pictures.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Drop requires location permission for flawless user experience.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Drop requires location permission for flawless user experience.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location</string>
-  <key>NSAppleMusicUsageDescription</key>
-  <string>music playback</string>
-  <key>NSCalendarsUsageDescription</key>
-  <string>events</string>
-  <key>NSCameraUsageDescription</key>
-  <string>overlay feature</string>
-  <key>NSPhotoLibraryUsageDescription</key>
-  <string>Saving selected wallpaper</string>
-  <key>ITSAppUsesNonExemptEncryption</key>
-  <false/>
+	<string>Drop requires location permission for flawless user experience.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Drop requires access to your phone’s gallery for pictures.</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
