--- a/package.json
+++ b/package.json
@@ -24,35 +24,40 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.27.2",
-    "react": "17.0.2",
-    "react-native": "0.68.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-config": "^1.4.4",
     "react-native-paper": "^4.9.2",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^3.3.0",
-    "react-native-screens": "^3.6.0",
-    "react-native-vector-icons": "^8.1.0",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^7.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
     "@types/react-native": "^0.64.5",
-    "@types/react-test-renderer": "^16.9.2",
-    "babel-jest": "^26.6.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.0",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "prettier": "^2.4.1",
+    "metro-react-native-babel-preset": "0.73.9",
     "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2",
-    "typescript": "^3.8.3"
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
   "resolutions": {
     "@types/react": "^17"
