--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,12 +10,12 @@ react {
     /* Folders */
     //   The root of your project, i.e. where "package.json" lives. Default is '..'
     // root = file("../")
-    //   The folder where the react-native NPM package is. Default is ../node_modules/react-native
-    // reactNativeDir = file("../node_modules/react-native")
-    //   The folder where the react-native Codegen package is. Default is ../node_modules/@react-native/codegen
-    // codegenDir = file("../node_modules/@react-native/codegen")
-    //   The cli.js file which is the React Native CLI entrypoint. Default is ../node_modules/react-native/cli.js
-    // cliFile = file("../node_modules/react-native/cli.js")
+    //   The folder where the react-native NPM package is. Default is ../../node_modules/react-native
+    // reactNativeDir = file("../../node_modules/react-native")
+    //   The folder where the react-native Codegen package is. Default is ../../node_modules/@react-native/codegen
+    // codegenDir = file("../../node_modules/@react-native/codegen")
+    //   The cli.js file which is the React Native CLI entrypoint. Default is ../../node_modules/react-native/cli.js
+    // cliFile = file("../../node_modules/react-native/cli.js")
 
     /* Variants */
     //   The list of variants to that are debuggable. For those we're going to
@@ -44,11 +44,14 @@ react {
     // extraPackagerArgs = []
 
     /* Hermes Commands */
-//   The hermes compiler command to run. By default it is 'hermesc'
-// hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
-//
-//   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
-// hermesFlags = ["-O", "-output-source-map"]
+    //   The hermes compiler command to run. By default it is 'hermesc'
+    // hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
+    //
+    //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
+    // hermesFlags = ["-O", "-output-source-map"]
+    
+    /* Autolinking */
+    autolinkLibrariesWithApp()
 }
 
 /**
@@ -115,5 +118,3 @@ dependencies {
         implementation jscFlavor
     }
 }
-
-apply from: file('../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle'); applyNativeModulesAppBuildGradle(project)
