--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator=\"iPhone 16\"",
     "lint": "eslint .",
     "start": "react-native start",
     "clean": "cd android && ./gradlew clean && cd ..",
@@ -24,34 +24,37 @@
     "build": "babel App --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@reduxjs/toolkit": "^2.2.3",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "app-icon": "^0.13.2",
-    "axios": "^1.6.8",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-config": "^1.5.1",
+    "axios": "^1.7.9",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-config": "^1.5.3",
     "react-native-paper": "^5.12.3",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.2"
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
+    "@babel/core": "^7.25.2",
     "@babel/node": "^7.23.9",
-    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.1",
-    "@babel/runtime": "^7.20.0",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@react-native/babel-preset": "0.74.83",
-    "@react-native/eslint-config": "0.74.83",
-    "@react-native/metro-config": "0.74.83",
-    "@react-native/typescript-config": "0.74.83",
+    "@react-native/babel-preset": "0.76.5",
+    "@react-native/eslint-config": "0.76.5",
+    "@react-native/metro-config": "0.76.5",
+    "@react-native/typescript-config": "0.76.5",
     "@tsconfig/react-native": "^3.0.5",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.3.0",
@@ -61,7 +64,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "5.0.4"
