--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         compileSdkVersion = 35
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
+         cmakeVersion = "3.22.1"
         kotlinVersion = "1.9.24"
     }
     repositories {
