--- a/package.json
+++ b/package.json
@@ -29,25 +29,40 @@
     "@pusher/pusher-websocket-react-native": "^1.3.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^2.5.0",
     "app-icon": "^0.13.2",
     "axios": "^1.7.9",
+    "cosmiconfig": "^9.0.0",
     "geolib": "^3.3.4",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.46",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "^0.75.5",
     "react-native-camera": "^4.2.1",
     "react-native-config": "^1.5.3",
+    "react-native-email": "^2.1.0",
+    "react-native-flash-message": "^0.4.1",
+    "react-native-get-location": "^4.0.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linking": "^0.0.0",
+    "react-native-maps": "1.11.3",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
+    "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-permissions": "^3.8.0",
+    "react-native-progress": "^5.0.0",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.4.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
+    "react-native-simple-toast": "^3.3.2",
+    "react-native-svg": "^13.9.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-version-check": "^3.5.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
@@ -57,7 +72,7 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.1",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli": "^19.1.0",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native-community/eslint-config": "^3.2.0",
