--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@pusher/pusher-websocket-react-native": "^1.3.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^2.5.0",
@@ -45,6 +46,7 @@
     "react-native-config": "^1.5.3",
     "react-native-email": "^2.1.0",
     "react-native-flash-message": "^0.4.1",
+    "react-native-gesture-handler": "1.10.3",
     "react-native-get-location": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linking": "^0.0.0",
@@ -55,6 +57,7 @@
     "react-native-permissions": "^3.8.0",
     "react-native-progress": "^5.0.0",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-reanimated": "^3.18.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
